src/test/ui/const-generics/issues/issue-56445.min.stderr
error[E0771]: use of non-static lifetime `'a` in const generic
  --> $DIR/issue-56445.rs:9:26
   |
LL | struct Bug<'a, const S: &'a str>(PhantomData<&'a ()>);
   |                          ^^
   |
   = note: for more information, see issue #74052 <https://github.com/rust-lang/rust/issues/74052>

error: using `&'static str` as const generic parameters is forbidden
  --> $DIR/issue-56445.rs:9:25
   |
LL | struct Bug<'a, const S: &'a str>(PhantomData<&'a ()>);
   |                         ^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0771`.
